[gd_scene load_steps=12 format=4 uid="uid://df3l3psfld3jm"]

[ext_resource type="Script" path="res://Scenes/Levels/Level_dressing/papir.gd" id="1_kfvt6"]
[ext_resource type="Texture2D" uid="uid://ddlq6fnr3oug1" path="res://Assets/Geo/character/papir/papir10_rough_papirTextur.png" id="2_h6y78"]
[ext_resource type="AudioStream" uid="uid://6c1pxqbxlimq" path="res://Audio/SFX/CD Spin.wav" id="3_t0t6n"]
[ext_resource type="AudioStream" uid="uid://cu2tg5lc0f7xo" path="res://Audio/SFX/Pickup Item.wav" id="4_owq1y"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qx16b"]
radius = 0.921769

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1fia6"]
resource_name = "papirTextur"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("2_h6y78")
roughness = 0.5
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_hp1sp"]
_surfaces = [{
"aabb": AABB(-0.0866158, -0.0005, -0.0722961, 0.177836, 0.001, 0.174383),
"format": 34359742465,
"index_count": 696,
"index_data": PackedByteArray("MwABAAIAAgABADQAMwA1AAEANQA0AAEANgAzAAIAAgA0ADYANgA0AAQANgAEAAMANAAFAAQAAwAEAAUABgA2AAMAAwAFAAYABgAzADYANwA0ADUAOAAFADQAOAA0ADcAOQA1ADMAOQA6ADUANwA1ADoAOwA6ADkAOwA8ADoANwA6ADwAOQA9ADsAPQA8ADsAMwA9ADkAPQA3ADwAMwA+AD0APgAzABMAEwAzAAYAPQA+AD8AQAA3AD0APQA/AEAAQABBADcAQgBBAEAAQgBDAEEAQABEAEIARABDAEIAQAA/AEQARQBBAEMARQA3AEEARABFAEMARgA3AEUARAA/AEcARwBFAEQAOAA3AEYARwA/AAAARwBIAEUAAABIAEcAAAAhAEgAPwAhAAAASQBIACEASQBFAEgAPwBJACEAIgBFAEkARgBFACIASgBJAD8ASgBLAEkAIgBJAEsAIABLAEoAIAAiAEsAPwAgAEoAIwAiACAAIwAkACIAIABMACMATAAkACMATQAiACQATABNACQARgAiAE0APwBOACAAIABOAEwAPwBPAE4APwBQAE8APwA+AFAATwBQAFEAUABSAFEAUQBSAFMAUQBTAE8AUAA4AFIAOABTAFIAUAA+AFQAVAA4AFAATwBTAFUAVABWADgAPgBWAFQATwBVAFcAUwBYAFUAVwBVAFgAWQBPAFcAVwBYAFkATgBPAFkAUwBGAFgAOABGAFMAWQBYAFoAWABbAFoAWABGAFsAWQBaAFwAXABaAF0AWgBbAF0AXABdAF4AXgBdAFsAXwBcAF4AXwBZAFwAXgBbAF8ATgBZAF8AXwBbAGAAWwBhAGAAXwBgAGIAYgBgAGEAWwBGAGEAYwBfAGIAYgBhAGMATgBfAGMAYwBhAAcAYwAHAGQAYQBlAAcAZAAHAGUAYQBGAGUAZgBjAGQAZABlAGYATgBjAGYAZgBlAEYAZgBGAE4ATgBGAGcARgBoAGcATgBnAGkAaQBnAGoAZwBoAGoAaQBqAGsAawBqAGgAbABpAGsAbABOAGkAawBoAGwARgAuAGgARgBNAC4AaAAuAG0AJwBOAGwATABOACcAbABoADEAaABtADEAbAAxADIAMgAxAC8AMQBtAC8AMgAvADAAMAAvAG0AbgAyADAAbgBsADIAMABtAG4AJwBsAG4AbgBtAG8AbQAuAG8AbgBvAHAAcABvAC4AJwBuAHAAcAAuACcAJwAuAC0ALgArAC0AJwAtACwALAAtACsAKgAnACwALAArACoALgBNACsATAAnACoAJQBNAEwATAAqACUAKwBNACYAJQAmAE0AKgArACkAKwAmACkAJQAqACgAKAAmACUAKgApACgAKAApACYAPgBxABwAcQAfABwAHAByAD4AHAAfAHIAPgByAFYAcgA4AFYAcwByAB8AcwA4AHIAcQBzAB8AHgBzAHEAPgAbAHEAcQAbAB4AHgAdAHMAGwAdAB4AFwBzAB0AFwA4AHMAGwAXAB0APgATABsADAA4ABcAGgAXABsABQA4AAwAGgAZABcAGwAYABoAGAAZABoAGwATABgAFQAXABkAGAAVABkADAAXABUAFgAVABgAGAATABYAFgAUABUADAAVABQAEwAUABYAEwAMABQAEgAMABMAEgARAAwAEwAQABIAEAARABIAEwB0ABAADwAMABEAEAAPABEADgAPABAAEAB0AA4ADgANAA8AdAANAA4AdQAMAA8AdQAPAA0AdAB1AA0ABQAMAHUAEwAGAHQABgAFAAgACwB1AHQAdAAGAAsABQB1AAoABQAKAAgACwAKAHUABgAIAAkACwAGAAkACQAIAAoACQAKAAsA"),
"lods": [0.0145322, PackedByteArray("AAABAAIAAwAAAAIAAgABAAMAAwABAAQAAwAEAAUAAQAFAAQAAwAFAAYABgAAAAMABwAFAAEABgAFAAgABgAIAAkABQAKAAgACQAIAAoACwAGAAkACQAKAAsABQAMAAoABQAHAAwACwAKAA0ACwANAA4ACgAPAA0ADgANAA8ACgAMAA8AEAALAA4ADgAPABAAEAAPABEADwAMABEAEAARABIAEgARAAwAEwALABAAEwAQABIAEwAGAAsAEgAMABMAEwAAAAYAEwAMABQADAAVABQAEwAUABYAFgAUABUADAAXABUAGAATABYAFgAVABgAGAAVABkAFQAXABkAGAAZABoAGgAZABcAGwAYABoAGwATABgAGgAXABsADAAHABcAHAATABsAHAAAABMAGwAXAB0AFwAHAB0AGwAdAB4AHAAbAB4AHgAdABwAHAAdAB8AHQAHAB8AHAAfAAcAAAAcACAAIAAhAAAAAAAhAAEABwABACEAIAAiACEABwAhACIAIwAiACAAIwAkACIAIAAlACMAJQAkACMAIAAcACUAJgAiACQABwAiACYAJQAmACQAJQAcACcAKAAmACUAKAApACYAJQAqACgAKgApACgAJQAnACoAKwAmACkAKgArACkALAArACoAKgAnACwALAAtACsAJwAtACwALgAmACsALgArAC0AJwAuAC0ABwAmAC4AJwAvAC4ABwAuAC8AMAAvACcABwAvADEAJwAyADAAMgAvADAAMgAxAC8AMgAHADEAJwAcADIAHAAHADIA")],
"name": "papirTextur",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 118,
"vertex_data": PackedByteArray("hNG6PWgSAzo3Urg9DMyPvXYSA7pKAMo9DMyPvWgSAzpKAMo9smeavWgSAzpQ5K49smeavXYSA7pQ5K49qpCRvXYSA7qWKKA9qpCRvWgSAzqWKKA9CIMUPXYSA7oUeZO9kv6avXYSA7rFTI09kv6avWgSAzrFTI09wLCVvXYSA7p8z209wLCVvWgSAzp8z209QuOgvXYSA7oM7qe8iLWfvXYSA7poKog8iLWfvWgSAzpoKog8pB6fvXYSA7rAHNu7pB6fvWgSAzrAHNu7NJqlvXYSA7qItD28NJqlvWgSAzqItD28QuOgvWgSAzoM7qe8+MemvXYSA7qcE9e8NpqlvXYSA7rAb/q8+MemvWgSAzqcE9e8pqysvXYSA7rQi069NpqlvWgSAzrAb/q8oqysvXYSA7r4SiW9oqysvWgSAzr4SiW9pqysvWgSAzrQi0696H6rvWgSAzoY64W9mmOxvXYSA7ooDF+9mmOxvWgSAzooDF+96H6rvXYSA7oY64W9bLG2PWgSAzplPXc9hNG6PXYSA7o3Urg9bLG2PXYSA7plPXc9qDq6PWgSAzp4alc9qDq6PXYSA7p4alc9tIO1PWgSAzrg0Og8tIO1PXYSA7rg0Og8xMywPWgSAzog96u7xKO5PWgSAzq4qpg8xKO5PXYSA7q4qpg80Oy0PWgSAzr0F4E80Oy0PXYSA7r0F4E8DHa4PWgSAzrgLR88DHa4PXYSA7rgLR88xMywPXYSA7og96u76Ay5PXYSA7qwJJy86Ay5PWgSAzqwJJy8aLG2PXYSA7rqOIu9aLG2PWgSAzrqOIu9yPtzvWgSAzrkxMs9IuyTvXYSA7pCm7M9yPtzvXYSA7rkxMs9IuyTvWgSAzpCm7M9kHJwvHYSA7rwDcc93N9YvXYSA7oQooq97NZlvWgSAzq2EtE97NZlvXYSA7q2EtE9SLqpvGgSAzrCW8w9SLqpvHYSA7rCW8w9kHJwvGgSAzrwDcc9wCKIvWgSAzpQdIm9xKO5PWgSAzo5xKo9wAEEu2gSAzrNpMc9wAEEu3YSA7rNpMc9CARGPWgSAzq6hMM9CARGPXYSA7q6hMM9jJmEPWgSAzpLcrw9jJmEPXYSA7pLcrw9mHJwPXYSA7okwo692F6nPWgSAzqxrbo92F6nPXYSA7qxrbo9xKO5PXYSA7o5xKo9DHa4PWgSAzogsYI9DHa4PXYSA7ogsYI9uIO1PWgSAzp5zQo9uIO1PXYSA7p5zQo9mHJwPWgSAzokwo69wLAVvWgSAzpklI293N9YvWgSAzoQooq9HJY8vWgSAzrg74+9HJY8vXYSA7rg74+9wLAVvXYSA7pklI29QA57vWgSAzokwo69OKcBvXYSA7r+WI+9QA57vXYSA7okwo69OKcBvWgSAzr+WI+9OPLfvHYSA7pEK469OPLfvGgSAzpEK469ULqpvHYSA7re74+9AN6WOXYSA7pYS5K9ULqpvGgSAzre74+9cJUbvHYSA7o44pK9cJUbvGgSAzo44pK9AN6WOWgSAzpYS5K98PCdPHYSA7r0D5S98NQCPXYSA7rAhpC98PCdPGgSAzr0D5S98NQCPWgSAzrAhpC9CIMUPWgSAzoUeZO9ULopPXYSA7qeHZG9ULopPWgSAzqeHZG9MMV/PXYSA7pYS5K9DMyPPXYSA7pEK469MMV/PWgSAzpYS5K9wCKIPXYSA7oUeZO9wCKIPWgSAzoUeZO9DMyPPWgSAzpEK4698FW0PXYSA7ow2my88FW0PWgSAzow2my8WJGyPXYSA7rwsxy8WJGyPWgSAzrwsxy8uMywvWgSAzq0FXO9wCKIvXYSA7pQdIm9uMywvXYSA7q0FXO9smeavWgSAzpw9LQ8smeavXYSA7pw9LQ8")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_t0t6n"]
resource_name = "papir10_rough_papirTextur_009"
_surfaces = [{
"aabb": AABB(-0.0866158, -0.0005, -0.0722961, 0.177836, 0.001, 0.174383),
"attribute_data": PackedByteArray("EtdxP9ht/T5GZTc/sOwAP0ZlNz+w7AA/EtdxP9ht/T5cHHE//EDuPgfncD9e5t0+ZLxxP55G6j7MfzI/ht6tPlzMcD/Oatc+taFxPwDk2D6sEXA/eKnMPmNscT++UtQ+XBxxPxaLrD4Lh3E/BJfFPhLXcT/Ybf0+NIU1P2YS+z5GZTc/sOwAP0QVNz94Y/c+3F80P3LaxD53SjI/1oe1Ph11MT/Od7M+goozP06yvz50SjI/8K+6PiZVMz8c6ME+llo2P0AT7T6SajU/fqzyPuOvND/a7Ms+M5U0P/bb1z5/ijM/sGvJPkZlNz+w7AA/RmU3P7DsAD80hTU/ZhL7PjSFNT9mEvs+B+dwP17m3T5cHHE//EDuPmS8cT+eRuo+H/FdPwx7qj4S13E/2G39PkZlNz+w7AA/XMxwP85q1z61oXE/AOTYPqwRcD94qcw+Y2xxP75S1D4Lh3E/BJfFPlwccT8Wi6w+RBU3P3hj9z40hTU/ZhL7Ph11MT/Od7M+zH8yP4berT53SjI/1oe1PtxfND9y2sQ+llo2P0AT7T6SajU/fqzyPuOvND/a7Ms+M5U0P/bb1z5/ijM/sGvJPoKKMz9Osr8+dEoyP/Cvuj4mVTM/HOjBPjSFNT9mEvs+RBU3P3hj9z5EFTc/eGP3PjSFNT9mEvs+RBU3P3hj9z6SajU/fqzyPpJqNT9+rPI+RBU3P3hj9z6SajU/fqzyPpZaNj9AE+0+llo2P0AT7T6SajU/fqzyPpZaNj9AE+0+M5U0P/bb1z4zlTQ/9tvXPpZaNj9AE+0+M5U0P/bb1z7jrzQ/2uzLPuOvND/a7Ms+M5U0P/bb1z7jrzQ/2uzLPn+KMz+wa8k+f4ozP7BryT7jrzQ/2uzLPn+KMz+wa8k+3F80P3LaxD7cXzQ/ctrEPn+KMz+wa8k+3F80P3LaxD4mVTM/HOjBPiZVMz8c6ME+3F80P3LaxD4mVTM/HOjBPoKKMz9Osr8+goozP06yvz4mVTM/HOjBPoKKMz9Osr8+dEoyP/Cvuj50SjI/8K+6PoKKMz9Osr8+dEoyP/Cvuj53SjI/1oe1PndKMj/Wh7U+dEoyP/Cvuj53SjI/1oe1Ph11MT/Od7M+HXUxP853sz53SjI/1oe1Ph11MT/Od7M+HXUxP853sz7MfzI/ht6tPsx/Mj+G3q0+zH8yP4berT7MfzI/ht6tPh/xXT8Me6o+XBxxPxaLrD5cHHE/FousPlwccT8Wi6w+C4dxPwSXxT4Lh3E/BJfFPlwccT8Wi6w+C4dxPwSXxT4Lh3E/BJfFPqwRcD94qcw+rBFwP3ipzD6sEXA/eKnMPmNscT++UtQ+Y2xxP75S1D6sEXA/eKnMPmNscT++UtQ+XMxwP85q1z5czHA/zmrXPmNscT++UtQ+XMxwP85q1z61oXE/AOTYPrWhcT8A5Ng+XMxwP85q1z61oXE/AOTYPgfncD9e5t0+B+dwP17m3T61oXE/AOTYPgfncD9e5t0+ZLxxP55G6j5kvHE/nkbqPgfncD9e5t0+ZLxxP55G6j5cHHE//EDuPlwccT/8QO4+ZLxxP55G6j5cHHE//EDuPlwccT/8QO4+EtdxP9ht/T4S13E/2G39PhlAOz9CJQE/GUA7P0IlAT+4oXE/XAr6PmBscT+YBfA++GZuP7oE/j5wQWg/2nX+Pg4WUD8+oQA/RlFiPzwdAD+OgEs/Zo4APxmAPD8AzwE/glBJPx84AT8ZQDs/QiUBP/+/OD82/Kw+l6o2Px5A/D55pT0/0LCsPgugOj/CqKs+ppVDPzr0qz6OJUA/WF2rPl4RZj/IqKs+G+tGP3rOqz4LW0U/EIOrPsiPMT+W9rA+N4U1P56o2j4M53A//LLgPrGxcD988sc+r2FwP65zyj4mPGo/hM6rPhJsZz98xqo+cuFoPwh7qj4PYVw/mjerPivRXz/kEas+H/FdPwx7qj5j61A/esaqPpbLVz9UVao+f1BJP1hdqz6hYE0/vKCqPpeqNj8eQPw+l6o2Px5A/D64oXE/XAr6Pvhmbj+6BP4+cEFoP9p1/j4OFlA/PqEAP0ZRYj88HQA/joBLP2aOAD9gbHE/mAXwPl4RZj/IqKs+DOdwP/yy4D4ZgDw/AM8BP4JQST8fOAE/GUA7P0IlAT+XqjY/HkD8PnmlPT/QsKw+N4U1P56o2j7IjzE/lvawPv+/OD82/Kw+C6A6P8Koqz6mlUM/OvSrPo4lQD9YXas+G+tGP3rOqz4LW0U/EIOrPmPrUD96xqo+f1BJP1hdqz6hYE0/vKCqPg9hXD+aN6s+lstXP1RVqj4r0V8/5BGrPiY8aj+Ezqs+EmxnP3zGqj5y4Wg/CHuqPrGxcD988sc+r2FwP65zyj6XqjY/HkD8PpeqNj8eQPw+N4U1P56o2j43hTU/nqjaPjeFNT+eqNo+N4U1P56o2j7IjzE/lvawPsiPMT+W9rA+yI8xP5b2sD7IjzE/lvawPv+/OD82/Kw+/784Pzb8rD7/vzg/NvysPgugOj/CqKs+C6A6P8Koqz7/vzg/NvysPgugOj/CqKs+eaU9P9CwrD55pT0/0LCsPgugOj/CqKs+eaU9P9CwrD6OJUA/WF2rPo4lQD9YXas+eaU9P9CwrD6OJUA/WF2rPqaVQz869Ks+ppVDPzr0qz6OJUA/WF2rPqaVQz869Ks+C1tFPxCDqz4LW0U/EIOrPqaVQz869Ks+C1tFPxCDqz4b60Y/es6rPhvrRj96zqs+C1tFPxCDqz4b60Y/es6rPn9QST9YXas+f1BJP1hdqz4b60Y/es6rPn9QST9YXas+oWBNP7ygqj6hYE0/vKCqPn9QST9YXas+oWBNP7ygqj5j61A/esaqPmPrUD96xqo+oWBNP7ygqj5j61A/esaqPpbLVz9UVao+lstXP1RVqj5j61A/esaqPpbLVz9UVao+D2FcP5o3qz4PYVw/mjerPpbLVz9UVao+D2FcP5o3qz4f8V0/DHuqPh/xXT8Me6o+D2FcP5o3qz4f8V0/DHuqPivRXz/kEas+K9FfP+QRqz4r0V8/5BGrPl4RZj/IqKs+XhFmP8ioqz4r0V8/5BGrPl4RZj/IqKs+EmxnP3zGqj4SbGc/fMaqPl4RZj/IqKs+EmxnP3zGqj5y4Wg/CHuqPnLhaD8Ie6o+EmxnP3zGqj5y4Wg/CHuqPiY8aj+Ezqs+JjxqP4TOqz5y4Wg/CHuqPiY8aj+Ezqs+JjxqP4TOqz6xsXA/fPLHPrGxcD988sc+sbFwP3zyxz6vYXA/rnPKPq9hcD+uc8o+sbFwP3zyxz6vYXA/rnPKPq9hcD+uc8o+DOdwP/yy4D4M53A//LLgPgzncD/8suA+DOdwP/yy4D5gbHE/mAXwPmBscT+YBfA+YGxxP5gF8D64oXE/XAr6PrihcT9cCvo+YGxxP5gF8D64oXE/XAr6PrihcT9cCvo++GZuP7oE/j74Zm4/ugT+Pvhmbj+6BP4+cEFoP9p1/j5wQWg/2nX+Pvhmbj+6BP4+cEFoP9p1/j5GUWI/PB0AP0ZRYj88HQA/cEFoP9p1/j5GUWI/PB0APw4WUD8+oQA/DhZQPz6hAD9GUWI/PB0APw4WUD8+oQA/joBLP2aOAD+OgEs/Zo4APw4WUD8+oQA/joBLP2aOAD+CUEk/HzgBP4JQST8fOAE/joBLP2aOAD+CUEk/HzgBPxmAPD8AzwE/GYA8PwDPAT+CUEk/HzgBPxmAPD8AzwE/GUA7P0IlAT8ZQDs/QiUBPxmAPD8AzwE/"),
"format": 34359742487,
"index_count": 696,
"index_data": PackedByteArray("mAABAAIAmACZAAEAmgAEAJsAnACaAA4AnQCaAJwAngCdAJ8AngCaAJ0AoACaAJ4AoQCgAKIAowCgAKEAoACkAJoAowCkAKAApQCjABAAmgCkAKYApgCkAKcAmgCmAKgAqACmAKkAmgCoAKoAmgCqAAQAqwCoAKwAqgCoAKsApACtAAcApAATAK0ArQATABQApAASABMApACjABIAEwAVABYAEwASABUAFQASABcAEgCjABEAEQCjAKUAEQClAA8AEgARAK4ArgARABgAGAARABkAEgCuABoAGgCuABsAEgAaABwABACvAAYABACqAK8ArwAIAAUABQAIAAkArwAKAAgACAAKAAsArwCqAAoACgCwALEAsAAMAA0AsACyAAwACgCyALAACgCqALIAsgCqALMAsgCzALQAqgC1ALYAtgC1ALcAqgC4ALUAtQC4ALkAqgCrALgAuACrALoAuAC6ALsAHQC8AL0AHQAeALwAvgC/ACUAvgDAAL8AwADBAMIAwADDAMEAIgDAAL4AIgC+AMQAxQDAACIAxQDDAMAAxgAiACMAxQAiAMYAwwDHAMgAwwDJAMcAwwDKAMkAyQDKACYAywDKAMMAywDDAMUAygAtAC4AywAtAMoALQAzADQALQDMADMALQAyAMwALQDLADIAzAA1ADYAzAAyADUANQAyADcAMgA4ADoAMgAxADgAOAAxADkAMgDLADEAMQDNAC8AMQDLAM0AzQDLAM4AzQDOADAAzgDLAM8AywDQANEAywDFANAA0ADSANMA0ADFANIA0gDFANQA0gDUANUA1QDUANYA1ADFANcA1ADXANgA1wDFANkA1wDZACQAxQDaANsA2wDaANwAxQApANoAxQDGACkA2gApAN0A2gDdACwALADdACsA3QApAN4AKQDGACcAKQAnACoAJwDGACEAJwAhACgA3wAgAB8A3wDgACAAOwA8AD0AOwA+ADwAPwBAAEEAPwBCAEAAQwBEAEUAQwBGAEQARwDhAOIARwBKAOEA4wBIAEkA4wDkAEgASwBMAE0ASwBOAEwATwBQAFEATwBSAFAAUwBUAFUAUwBWAFQAVwBYAFkAVwBaAFgAWwBcAF0AWwBeAFwAXwBgAGEAXwBiAGAAYwBkAGUAYwBmAGQAZwBoAGkAZwBqAGgAawDlAOYAawBsAOUA5wBuAG0A5wDoAG4AbwDpAOoAbwBwAOkA6wDsAO0A6wDuAOwA7wDwAPEA7wDyAPAA8wD0APUA8wD2APQA9wD4APkA9wD6APgA+wD8AP0A+wD+APwA/wAAAQEB/wACAQABAwEEAQUBAwEGAQQBBwEIAQkBBwEKAQgBCwEMAQ0BCwEOAQwBDwEQAREBDwESARABEwEUARUBEwEWARQBFwEYARkBFwEaARgBGwEcAR0BGwFxABwBHgEfASABHgEhAR8BIgEjASQBIgElASMBJgEnASgBJgEpAScBKgErASwBKgEtASsBLgFzAHIALgEvAXMAdAB1AHYAdAB3AHUAeAAwATEBeAB5ADABMgEzATQBMgE1ATMBNgF7AHoANgE3AXsAfAB9AH4AfAB/AH0AgACBAIIAgACDAIEAhACFAIYAhACHAIUAiACJAIoAiACLAIkAjAA4ATkBjACPADgBOgGNAI4AOgE7AY0AkACRAJIAkACTAJEAlAA8AT0BlACVADwBPgE/AUABPgFBAT8BQgGWAJcAQgFDAZYAAABEAUUBAAADAEQBRgFHAUgBRgFJAUcBSgFLAUwBSgFNAUsBTgFPAVABTgFRAU8BUgFTAVQBUgFVAVMBVgFXAVgBVgFZAVcBWgFbAVwBWgFdAVsBXgFfAWABXgFhAV8B"),
"lods": [0.0145322, PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUABQAIAAkABQAKAAgACAAKAAsABQAHAAoACgAMAA0ACgAHAAwADgAHAAQADwAOABAAEQAOAA8ABwAOABIAEgAOABEABwATABQABwASABMAEwAVABYAEwASABUAFQASABcAEgARABgAGAARABkAEgAYABoAGgAYABsAEgAaABwAHQAeAB8AHwAeACAAIQAiACMAJAAiACEAJAAlACIAJAAmACUAJwAhACgAKQAhACcAKQAnACoAJAAhACkAJAApACsAJAArACwAJgAtAC4AJAAtACYALwAkADAAMQAkAC8ALQAkADIAMgAkADEALQAzADQALQAyADMAMwAyADUAMwA1ADYANQAyADcAMgAxADgAOAAxADkAMgA4ADoAOwA8AD0AOwA+ADwAPwBAAEEAPwBCAEAAQwBEAEUAQwBGAEQARwBIAEkARwBKAEgASwBMAE0ASwBOAEwATwBQAFEATwBSAFAAUwBUAFUAUwBWAFQAVwBYAFkAVwBaAFgAWwBcAF0AWwBeAFwAXwBgAGEAXwBiAGAAYwBkAGUAYwBmAGQAZwBoAGkAZwBqAGgAawBsAG0AbQBsAG4AbwBwAHEAbwBxAHIAcgBxAHMAdAB1AHYAdAB3AHUAeAB5AHoAegB5AHsAfAB9AH4AfAB/AH0AgACBAIIAgACDAIEAhACFAIYAhACHAIUAiACJAIoAiACLAIkAjACNAI4AjACPAI0AkACRAJIAkACTAJEAlACVAJYAlACWAJcA")],
"material": SubResource("StandardMaterial3D_1fia6"),
"name": "papirTextur",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 354,
"vertex_data": PackedByteArray("hNG6PWgSAzo3Urg9DMyPvXYSA7pKAMo9DMyPvWgSAzpKAMo9hNG6PXYSA7o3Urg9bLG2PWgSAzplPXc9tIO1PWgSAzrg0Og8qDq6PWgSAzp4alc96H6rvWgSAzoY64W90Oy0PWgSAzr0F4E8xKO5PWgSAzq4qpg8xMywPWgSAzog96u7DHa4PWgSAzrgLR88aLG2PWgSAzrqOIu96Ay5PWgSAzqwJJy8hNG6PWgSAzo3Urg9smeavWgSAzpQ5K49DMyPvWgSAzpKAMo9qpCRvWgSAzqWKKA9QuOgvWgSAzoM7qe8pqysvWgSAzrQi069mmOxvWgSAzooDF+9NpqlvWgSAzrAb/q8oqysvWgSAzr4SiW9+MemvWgSAzqcE9e8wLCVvWgSAzp8z209kv6avWgSAzrFTI09pB6fvWgSAzrAHNu7iLWfvWgSAzpoKog8NJqlvWgSAzqItD28DMyPvWgSAzpKAMo9DMyPvXYSA7pKAMo9smeavWgSAzpQ5K49smeavXYSA7pQ5K49tIO1PXYSA7rg0Og8bLG2PXYSA7plPXc9qDq6PXYSA7p4alc9CIMUPXYSA7oUeZO9hNG6PXYSA7o3Urg9DMyPvXYSA7pKAMo90Oy0PXYSA7r0F4E8xKO5PXYSA7q4qpg8xMywPXYSA7og96u7DHa4PXYSA7rgLR886Ay5PXYSA7qwJJy8aLG2PXYSA7rqOIu9qpCRvXYSA7qWKKA9smeavXYSA7pQ5K49mmOxvXYSA7ooDF+96H6rvXYSA7oY64W9pqysvXYSA7rQi069QuOgvXYSA7oM7qe8wLCVvXYSA7p8z209kv6avXYSA7rFTI09pB6fvXYSA7rAHNu7iLWfvXYSA7poKog8NJqlvXYSA7qItD28NpqlvXYSA7rAb/q8oqysvXYSA7r4SiW9+MemvXYSA7qcE9e8smeavWgSAzpQ5K49qpCRvXYSA7qWKKA9qpCRvWgSAzqWKKA9smeavXYSA7pQ5K49qpCRvWgSAzqWKKA9kv6avXYSA7rFTI09kv6avWgSAzrFTI09qpCRvXYSA7qWKKA9kv6avWgSAzrFTI09wLCVvXYSA7p8z209wLCVvWgSAzp8z209kv6avXYSA7rFTI09wLCVvWgSAzp8z209iLWfvXYSA7poKog8iLWfvWgSAzpoKog8wLCVvXYSA7p8z209iLWfvWgSAzpoKog8pB6fvXYSA7rAHNu7pB6fvWgSAzrAHNu7iLWfvXYSA7poKog8pB6fvWgSAzrAHNu7NJqlvXYSA7qItD28NJqlvWgSAzqItD28pB6fvXYSA7rAHNu7NJqlvWgSAzqItD28QuOgvXYSA7oM7qe8QuOgvWgSAzoM7qe8NJqlvXYSA7qItD28QuOgvWgSAzoM7qe8+MemvXYSA7qcE9e8+MemvWgSAzqcE9e8QuOgvXYSA7oM7qe8+MemvWgSAzqcE9e8NpqlvXYSA7rAb/q8NpqlvWgSAzrAb/q8+MemvXYSA7qcE9e8NpqlvWgSAzrAb/q8oqysvXYSA7r4SiW9oqysvWgSAzr4SiW9NpqlvXYSA7rAb/q8oqysvWgSAzr4SiW9pqysvXYSA7rQi069pqysvWgSAzrQi069oqysvXYSA7r4SiW9pqysvWgSAzrQi069mmOxvXYSA7ooDF+9mmOxvWgSAzooDF+9pqysvXYSA7rQi069mmOxvWgSAzooDF+9mmOxvXYSA7ooDF+96H6rvWgSAzoY64W96H6rvXYSA7oY64W96H6rvWgSAzoY64W96H6rvXYSA7oY64W9CIMUPXYSA7oUeZO9aLG2PWgSAzrqOIu9aLG2PXYSA7rqOIu9aLG2PWgSAzrqOIu96Ay5PXYSA7qwJJy86Ay5PWgSAzqwJJy8aLG2PXYSA7rqOIu96Ay5PWgSAzqwJJy86Ay5PXYSA7qwJJy8xMywPWgSAzog96u7xMywPXYSA7og96u7xMywPWgSAzog96u7DHa4PXYSA7rgLR88DHa4PWgSAzrgLR88xMywPXYSA7og96u7DHa4PWgSAzrgLR880Oy0PXYSA7r0F4E80Oy0PWgSAzr0F4E8DHa4PXYSA7rgLR880Oy0PWgSAzr0F4E8xKO5PXYSA7q4qpg8xKO5PWgSAzq4qpg80Oy0PXYSA7r0F4E8xKO5PWgSAzq4qpg8tIO1PXYSA7rg0Og8tIO1PWgSAzrg0Og8xKO5PXYSA7q4qpg8tIO1PWgSAzrg0Og8qDq6PXYSA7p4alc9qDq6PWgSAzp4alc9tIO1PXYSA7rg0Og8qDq6PWgSAzp4alc9bLG2PXYSA7plPXc9bLG2PWgSAzplPXc9qDq6PXYSA7p4alc9bLG2PWgSAzplPXc9bLG2PXYSA7plPXc9hNG6PXYSA7o3Urg9hNG6PWgSAzo3Urg9yPtzvWgSAzrkxMs9yPtzvXYSA7rkxMs9xKO5PWgSAzo5xKo9DHa4PWgSAzogsYI92F6nPWgSAzqxrbo9jJmEPWgSAzpLcrw9wAEEu2gSAzrNpMc9CARGPWgSAzq6hMM9kHJwvGgSAzrwDcc97NZlvWgSAzq2EtE9SLqpvGgSAzrCW8w9yPtzvWgSAzrkxMs9wCKIvWgSAzpQdIm9IuyTvWgSAzpCm7M93N9YvWgSAzoQooq9QA57vWgSAzokwo69wLAVvWgSAzpklI29HJY8vWgSAzrg74+9mHJwPWgSAzokwo69OPLfvGgSAzpEK469OKcBvWgSAzr+WI+9uMywvWgSAzq0FXO9smeavWgSAzpw9LQ8uIO1PWgSAzp5zQo98FW0PWgSAzow2my8WJGyPWgSAzrwsxy8DMyPPWgSAzpEK469MMV/PWgSAzpYS5K9wCKIPWgSAzoUeZO98NQCPWgSAzrAhpC9ULopPWgSAzqeHZG9CIMUPWgSAzoUeZO9AN6WOWgSAzpYS5K98PCdPGgSAzr0D5S9ULqpvGgSAzre74+9cJUbvGgSAzo44pK9IuyTvXYSA7pCm7M9IuyTvWgSAzpCm7M9xKO5PXYSA7o5xKo92F6nPXYSA7qxrbo9jJmEPXYSA7pLcrw9wAEEu3YSA7rNpMc9CARGPXYSA7q6hMM9kHJwvHYSA7rwDcc9DHa4PXYSA7ogsYI9mHJwPXYSA7okwo69uIO1PXYSA7p5zQo97NZlvXYSA7q2EtE9SLqpvHYSA7rCW8w9yPtzvXYSA7rkxMs9IuyTvXYSA7pCm7M93N9YvXYSA7oQooq9smeavXYSA7pw9LQ8uMywvXYSA7q0FXO9wCKIvXYSA7pQdIm9QA57vXYSA7okwo69wLAVvXYSA7pklI29HJY8vXYSA7rg74+9OPLfvHYSA7pEK469OKcBvXYSA7r+WI+9AN6WOXYSA7pYS5K9ULqpvHYSA7re74+9cJUbvHYSA7o44pK98NQCPXYSA7rAhpC98PCdPHYSA7r0D5S9ULopPXYSA7qeHZG9DMyPPXYSA7pEK469MMV/PXYSA7pYS5K9wCKIPXYSA7oUeZO98FW0PXYSA7ow2my8WJGyPXYSA7rwsxy8IuyTvWgSAzpCm7M9IuyTvXYSA7pCm7M9smeavXYSA7pw9LQ8smeavWgSAzpw9LQ8smeavWgSAzpw9LQ8smeavXYSA7pw9LQ8uMywvXYSA7q0FXO9uMywvWgSAzq0FXO9uMywvWgSAzq0FXO9uMywvXYSA7q0FXO9wCKIvXYSA7pQdIm9wCKIvWgSAzpQdIm9wCKIvWgSAzpQdIm9QA57vXYSA7okwo69QA57vWgSAzokwo69wCKIvXYSA7pQdIm9QA57vWgSAzokwo693N9YvXYSA7oQooq93N9YvWgSAzoQooq9QA57vXYSA7okwo693N9YvWgSAzoQooq9HJY8vXYSA7rg74+9HJY8vWgSAzrg74+93N9YvXYSA7oQooq9HJY8vWgSAzrg74+9wLAVvXYSA7pklI29wLAVvWgSAzpklI29HJY8vXYSA7rg74+9wLAVvWgSAzpklI29OKcBvXYSA7r+WI+9OKcBvWgSAzr+WI+9wLAVvXYSA7pklI29OKcBvWgSAzr+WI+9OPLfvHYSA7pEK469OPLfvGgSAzpEK469OKcBvXYSA7r+WI+9OPLfvGgSAzpEK469ULqpvHYSA7re74+9ULqpvGgSAzre74+9OPLfvHYSA7pEK469ULqpvGgSAzre74+9cJUbvHYSA7o44pK9cJUbvGgSAzo44pK9ULqpvHYSA7re74+9cJUbvGgSAzo44pK9AN6WOXYSA7pYS5K9AN6WOWgSAzpYS5K9cJUbvHYSA7o44pK9AN6WOWgSAzpYS5K98PCdPHYSA7r0D5S98PCdPGgSAzr0D5S9AN6WOXYSA7pYS5K98PCdPGgSAzr0D5S98NQCPXYSA7rAhpC98NQCPWgSAzrAhpC98PCdPHYSA7r0D5S98NQCPWgSAzrAhpC9CIMUPXYSA7oUeZO9CIMUPWgSAzoUeZO98NQCPXYSA7rAhpC9CIMUPWgSAzoUeZO9ULopPXYSA7qeHZG9ULopPWgSAzqeHZG9ULopPWgSAzqeHZG9mHJwPXYSA7okwo69mHJwPWgSAzokwo69ULopPXYSA7qeHZG9mHJwPWgSAzokwo69MMV/PXYSA7pYS5K9MMV/PWgSAzpYS5K9mHJwPXYSA7okwo69MMV/PWgSAzpYS5K9wCKIPXYSA7oUeZO9wCKIPWgSAzoUeZO9MMV/PXYSA7pYS5K9wCKIPWgSAzoUeZO9DMyPPXYSA7pEK469DMyPPWgSAzpEK469wCKIPXYSA7oUeZO9DMyPPWgSAzpEK469DMyPPXYSA7pEK4698FW0PXYSA7ow2my88FW0PWgSAzow2my88FW0PWgSAzow2my8WJGyPXYSA7rwsxy8WJGyPWgSAzrwsxy88FW0PXYSA7ow2my8WJGyPWgSAzrwsxy8WJGyPXYSA7rwsxy8uIO1PXYSA7p5zQo9uIO1PWgSAzp5zQo9uIO1PWgSAzp5zQo9uIO1PXYSA7p5zQo9DHa4PXYSA7ogsYI9DHa4PWgSAzogsYI9DHa4PWgSAzogsYI9xKO5PXYSA7o5xKo9xKO5PWgSAzo5xKo9DHa4PXYSA7ogsYI9xKO5PWgSAzo5xKo9xKO5PXYSA7o5xKo92F6nPXYSA7qxrbo92F6nPWgSAzqxrbo92F6nPWgSAzqxrbo9jJmEPXYSA7pLcrw9jJmEPWgSAzpLcrw92F6nPXYSA7qxrbo9jJmEPWgSAzpLcrw9CARGPXYSA7q6hMM9CARGPWgSAzq6hMM9jJmEPXYSA7pLcrw9CARGPWgSAzq6hMM9wAEEu3YSA7rNpMc9wAEEu2gSAzrNpMc9CARGPXYSA7q6hMM9wAEEu2gSAzrNpMc9kHJwvHYSA7rwDcc9kHJwvGgSAzrwDcc9wAEEu3YSA7rNpMc9kHJwvGgSAzrwDcc9SLqpvHYSA7rCW8w9SLqpvGgSAzrCW8w9kHJwvHYSA7rwDcc9SLqpvGgSAzrCW8w97NZlvXYSA7q2EtE97NZlvWgSAzq2EtE9SLqpvHYSA7rCW8w97NZlvWgSAzq2EtE9yPtzvXYSA7rkxMs9yPtzvWgSAzrkxMs97NZlvXYSA7q2EtE91Y3/f////z9mdv9/////P2Z2/3////8/1Y3/f////z//f///////v/9//////wzA/3///////7//f////v//v/9////9//+//3//////AMD/f///////v/9////+//+//3////7//7//f///////v/9////+//+//3////7//7//f////v//v/9////+//+//3////7//7//f////v//v/9////7//+//3//////B8D/f////f//v/9////6//+//3//////AsD/f///////v/9//////xDA/3//////AMD/f////f//v+kT/3////8/6RP/f////z8ZSv9/////PxlK/3////8//38AAP//8j//fwAA////P/9/AAD///8//38AAP///z//fwAA/v//P/9/AAD+//8//38AAP3//z//fwAA///+P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD+//8//38AAIf//z//fwAA/v//P/9/AAD7//8//38AAP7//z//fwAA/v//P/9/AAD+//8//38AAP///D//fwAA////P/9/AAD//+0//38AAP///j//fwAA/f//P/9/AAD///c//38AAP3//z//fwAA+v//PwAA/6////+/AAD/r////78AAP+v////vwAA/6////+/qir/f////z+qKv9/////P6oq/3////8/qir/f////z8AAIKY////vwAAgpj///+/AACCmP///78AAIKY////v7MH/3////8/JCn/f////z8kKf9/////P7MH/3////8/AACNgf///78AAI2B////vwAAjYH///+/AACNgf///79JMv9/////P0ky/3////8/STL/f////z9JMv9/////PwAAQZr///+/AABBmv///78AAEGa////vwAAQZr///+/qir/f////z+qKv9/////P6oq/3////8/qir/f////z8AAA+P////vwAAD4////+/AAAPj////78AAA+P////v2Mh/3////8/YyH/f////z9jIf9/////P2Mh/3////8/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7+LLv9/////P4su/3////8/iy7/f////z+LLv9/////PwAAG4f///+/AAAbh////78AAGWm////vwAAZab///+/AABc9P///78AAFz0////v///uuj///+////89v///7////z2////v///8IL///+////wgv///7////CC////v///8IL///+/VNX/f////z9U1f9/////P6rq/3////8/qur/f////z///5iZ////v///mJn///+///+Ymf///7///5iZ////v43j/3////8/jeP/f////z+N4/9/////P43j/3////8////iuP///7///+K4////v///4rj///+////iuP///78l6v9/////PyXq/3////8/Jer/f////z8l6v9/////P////3////+///8Hjv///7///weO////v////3////+/uuj/f////z+66P9/////P7ro/3////8/uuj/f////z///5qZ////v///mpn///+///88iv///7///zyK////v2Z2/3////8/Znb/f////z//f////v//v/9///////+//3///////7//f////v//v/9////+//+//3///////7//f///////v/9///////+//3////7//7//f////v//v/9///////+//3////7//7//f///////v/9///////+//3////7//7//f///////v/9///////+//3///////7//f////v//v/9////+//+//3///8L//7//f////v//v/9////9//+//3///7v//7//f///////v/9///////+//3////7//7//f////P//v/9///////+//3///////7//f///////v/9////+//+//3////7//7//f///////v+kT/3////8/6RP/f////z//fwAA////P/9/AAD///8//38AAP///z//fwAA/v//P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD+//8//38AAP///z//fwAA/v//P/9/AAD///8//38AAMT//z//fwAA/v//P/9/AAD///8//38AAP///z//fwAA/v//P/9/AAD///8//38AAP///z//fwAA/v//P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD8//8//38AAP7//z//fwAA////P/9/AAD///8//38AAP///z//fwAA/v//P/9/AAD9//8//38AALv//z8ZSv9/////PxlK/3////8/swf/f////z+zB/9/////PyQp/3////8/JCn/f////z8AABuH////vwAAG4f///+/AABlpv///78AAGWm////vwAAXPT///+/AABc9P///78AAFTV////vwAAVNX///+/AABU1f///78AAFTV////v///HOf///+///8c5////7///xzn////v///HOf///+/AAAW3f///78AABbd////vwAAFt3///+/AAAW3f///7///yny////v///KfL///+///8p8v///7///yny////vwAAy+z///+/AADL7P///78AAMvs////vwAAy+z///+////u8P///7///+7w////v///7vD///+////u8P///78AADvx////vwAAO/H///+/AAA78f///78AADvx////vwAAcvH///+/AABy8f///78AAHLx////vwAAcvH///+///9W/P///7///1b8////v///Vvz///+///9W/P///78AAG76////vwAAbvr///+/AABu+v///78AAG76////v///o/D///+///+j8P///7///6Pw////v///o/D///+/AAD/3////78AAP/f////vwAA/9////+/AAD/3////7///7ro////v///uuj///+///+66P///7/////3////v/////f///+/////9////7/////3////vwAAktf///+/AACS1////78AAJLX////vwAAktf///+/AAD/7////78AAP/v////vwAA/+////+/AAD/7////7///6LL////v///osv///+///+iy////7///6LL////v////Pb///+////89v///79U1f9/////P1TV/3////8/y+z/f////z/L7P9/////P8vs/3////8/y+z/f////z+q6v9/////P6rq/3////8/////f////7////9/////v///B47///+///8Hjv///7///5qZ////v///mpn///+///+ng////7///6eD////v///p4P///+///+ng////7///zyK////v///PIr///+/1Y3/f////z/Vjf9/////PzGG/3////8/MYb/f////z8xhv9/////PzGG/3////8/Qpb/f////z9Clv9/////P0KW/3////8/Qpb/f////z/shP9/////P+yE/3////8/7IT/f////z/shP9/////Pyd9/3////8/J33/f////z8nff9/////Pyd9/3////8/Zab/f////z9lpv9/////P2Wm/3////8/Zab/f////z/Qh/9/////P9CH/3////8/0If/f////z/Qh/9/////PyRJ/3////8/JEn/f////z8kSf9/////PyRJ/3////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hp1sp")

[sub_resource type="Animation" id="Animation_pqkdt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler/OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scaler/OmniLight3D2:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_s0xln"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Scaler/OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.831, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Scaler/OmniLight3D2:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.51, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 0.4, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kitp1"]
_data = {
&"RESET": SubResource("Animation_pqkdt"),
&"idle": SubResource("Animation_s0xln")
}

[node name="Paper" type="Node3D"]
script = ExtResource("1_kfvt6")

[node name="Scaler" type="Node3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="Scaler"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Scaler/Area3D"]
shape = SubResource("SphereShape3D_qx16b")

[node name="papir" type="MeshInstance3D" parent="Scaler/Area3D"]
transform = Transform3D(6.84956, -1.44343, 6.30943e-08, 0, -3.0598e-07, -7, 1.44343, 6.84956, -2.99404e-07, -0.0457279, 0.0604018, 0)
mesh = SubResource("ArrayMesh_t0t6n")
skeleton = NodePath("")

[node name="OmniLight3D" type="OmniLight3D" parent="Scaler"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.128814, 0, 0)
light_color = Color(0.67451, 0.482353, 0.188235, 1)
light_size = 0.019
omni_range = 1.13773

[node name="OmniLight3D2" type="OmniLight3D" parent="Scaler"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.0489811, 0, 0)
light_color = Color(0.72549, 0.462745, 0.0509804, 1)
light_energy = 2.0
light_size = 0.019
omni_range = 1.13773

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kitp1")
}
autoplay = "idle"

[node name="papirSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_t0t6n")
volume_db = -10.0
unit_size = 0.5
autoplay = true
max_distance = 5.0

[node name="PickupSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_owq1y")

[connection signal="body_entered" from="Scaler/Area3D" to="." method="_on_area_3d_body_entered"]
